--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <html>
 <body>
-Iya and welcome to the wob
+Bake off is life.
+
+<IMG SRC="https://metrouk2.files.wordpress.com/2015/12/i-like-it.gif" ALT="some text" WIDTH=32 HEIGHT=32>
 </body>
 
 </html>
