--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 <body>
 Bake off is life.
 
-https://www.youtube.com/embed/watch?v=wBoRkg5-Ieg?autoplay=1
+<iframe width="420" height="315"
+src="https://www.youtube.com/embed/watch?v=wBoRkg5-Ieg?autoplay=1">
+</iframe>
 </body>
 
 </html>
