--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 Bake off is life.
 
 <iframe width="420" height="315"
-src="https://www.youtube.com/watch?v=wBoRkg5-Ieg?autoplay=1">
+src="https://www.youtube.com/embed/watch?v=wBoRkg5-Ieg?autoplay=1">
 </iframe>
 </body>
 
