--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <html>
 <body>
-Bake off is life.
+Welcome back you little belter, and welcome to the Sesh.
 
 <iframe width="420" height="315"
-src="https://www.youtube.com/watch?v=wBoRkg5-Ieg">
+src="https://www.youtube.com/watch?v=wBoRkg5-Ieg?autoplay=1">
 </iframe>
 </body>
 
