--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 Welcome back you little belter, and welcome to the Sesh.
 
 
-<object data="https://www.youtube.com/watch?v=wBoRkg5-Ieg?autoplay=1" width="600" height="400">
-    <embed src="https://www.youtube.com/watch?v=wBoRkg5-Ieg?autoplay=1" width="600" height="400"> </embed>
+<object data="https://www.youtube.com/watch?v=wBoRkg5-Ieg?autoplay=1">
+    <embed src="https://www.youtube.com/watch?v=wBoRkg5-Ieg?autoplay=1"> </embed>
     
 </object>
 
