--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <html>
 <body>
-Welcome back you little belter, and welcome to the Sesh.
+Iya
 
 
 <object data="https://www.youtube.com/watch?v=wBoRkg5-Ieg?autoplay=1">
